--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -1,5 +1,6 @@
 $primary-dark: #404040;
 $primary-light: #e5e5e5;
 $highlight: #f46c50;
+$mid-tone: #ccc;
 $secondary-highlight: #409fed;
 $shadow: 0 0 4px rgba(0,0,0, 0.2);
