--- a/src/styles/variables/_screensizes.scss
+++ b/src/styles/variables/_screensizes.scss
@@ -1,2 +1,7 @@
-$xs-only: "only screen and (max-width: 543px)";
-$md-and-down: "only screen and (max-width: 991px)";
+$only: "only screen and";
+
+$xs-only: "#{$only} (max-width: 543px)";
+$sm-only: "#{$only} (min-width: 544px) and (max-width: 767px)";
+$md-and-down: "#{$only} (max-width: 991px)";
+$md-only: "#{$only} (min-width: 768px) and (max-width: 991px)";
+$lg-and-up: "#{$only} (min-width: 992px)";
